Resize game-info to prevent linebreak in name

--- a/application.css
+++ b/application.css
@@ -167,6 +167,7 @@ h1, h3 {
   margin-top: 10px;
   flex-direction: column;
   text-align: center;
+  min-width:365px;
 }
 .easy {
   width: 340px;
